--- a/index.html
+++ b/index.html
@@ -1025,6 +1025,16 @@
   </div>
 
   <!--Kerangka kampanye-->
+  <section id="timkami">
+    <div class="container-fluid" style="color:#A67401;">
+      <div class="container-fluid marketing">
+        <div class="row featurette">
+          <div data-aos="fade-down" class="col-md-12 col-sm-3">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="page-section" id="contact">
     <div class="container">
